--- a/GreylockCloudCode/public/index.html
+++ b/GreylockCloudCode/public/index.html
@@ -12,10 +12,28 @@
     </style>
   </head>
   <body>
+<script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '724994424276728',
+          xfbml      : true,
+          version    : 'v2.3'
+        });
+      };
+
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "//connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+    </script>
     <div>
       <h1>Congratulations! You're already hosting with Parse.</h1>
       <p>To get started, edit this file at <em>public/index.html</em> and start adding static content.</p>
       <p>If you want something a bit more dynamic, delete this file and check out <a href="https://parse.com/docs/hosting_guide#webapp">our hosting docs</a>.</p>
     </div>
-  </body>
+
+	 </body>
 </html>
