Added linkedin authorized Javascript SDK

--- a/GreylockCloudCode/public/index.html
+++ b/GreylockCloudCode/public/index.html
@@ -10,6 +10,12 @@
     em { font-family: monospace; }
     a { color: #5298fc; text-decoration: none; }
     </style>
+	<script type="text/javascript" src="//platform.linkedin.com/in.js">
+	    api_key:   75qd365qzyvqso
+	    authorize: [AUTHORIZE]
+	    lang:      [LANG_LOCALE]
+	</script>
+
   </head>
   <body>
 <script>
