--- a/GreylockCloudCode/public/index.html
+++ b/GreylockCloudCode/public/index.html
@@ -1,7 +1,7 @@
 
 <html>
   <head>
-    <title>My ParseApp site</title>
+    <title>ayy lmao</title>
     <style>
     body { font-family: Helvetica, Arial, sans-serif; }
     div { width: 800px; height: 400px; margin: 40px auto; padding: 20px; border: 2px solid #5298fc; }
@@ -39,6 +39,7 @@
       <h1>Congratulations! You're already hosting with Parse.</h1>
       <p>To get started, edit this file at <em>public/index.html</em> and start adding static content.</p>
       <p>If you want something a bit more dynamic, delete this file and check out <a href="https://parse.com/docs/hosting_guide#webapp">our hosting docs</a>.</p>
+      <p>weeeee i'm using sublime on the cloud!</p>
     </div>
 
 	 </body>
