--- a/GreylockCloudCode/public/index.html
+++ b/GreylockCloudCode/public/index.html
@@ -1,46 +1,25 @@
-
 <html>
-  <head>
+
+<head>
     <title>ayy lmao</title>
-    <style>
-    body { font-family: Helvetica, Arial, sans-serif; }
-    div { width: 800px; height: 400px; margin: 40px auto; padding: 20px; border: 2px solid #5298fc; }
-    h1 { font-size: 30px; margin: 0; }
-    p { margin: 40px 0; }
-    em { font-family: monospace; }
-    a { color: #5298fc; text-decoration: none; }
-    </style>
-	<script type="text/javascript" src="//platform.linkedin.com/in.js">
-	    api_key:   75qd365qzyvqso
-	    authorize: [AUTHORIZE]
-	    lang:      [LANG_LOCALE]
-	</script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script type="text/javascript" src="../cloud/main.js"></script>
+    <script type="text/javascript" src="//platform.linkedin.com/in.js">
+    api_key: 75 qd365qzyvqso
+    authorize: [AUTHORIZE]
+    lang: [LANG_LOCALE]
+    </script>
+</head>
 
-  </head>
-  <body>
-<script>
-      window.fbAsyncInit = function() {
-        FB.init({
-          appId      : '724994424276728',
-          xfbml      : true,
-          version    : 'v2.3'
-        });
-      };
-
-      (function(d, s, id){
-         var js, fjs = d.getElementsByTagName(s)[0];
-         if (d.getElementById(id)) {return;}
-         js = d.createElement(s); js.id = id;
-         js.src = "//connect.facebook.net/en_US/sdk.js";
-         fjs.parentNode.insertBefore(js, fjs);
-       }(document, 'script', 'facebook-jssdk'));
+<body>
+    <script>
     </script>
     <div>
-      <h1>Congratulations! You're already hosting with Parse.</h1>
-      <p>To get started, edit this file at <em>public/index.html</em> and start adding static content.</p>
-      <p>If you want something a bit more dynamic, delete this file and check out <a href="https://parse.com/docs/hosting_guide#webapp">our hosting docs</a>.</p>
-      <p>weeeee i'm using sublime on the cloud!</p>
+        <h1>Congratulations! You're already hosting with Parse.</h1>
+        <p>To get started, edit this file at <em>public/index.html</em> and start adding static content.</p>
+        <p>If you want something a bit more dynamic, delete this file and check out <a href="https://parse.com/docs/hosting_guide#webapp">our hosting docs</a>.</p>
+        <p>weeeee i'm using sublime on the cloud!</p>
     </div>
+</body>
 
-	 </body>
 </html>
