--- a/GreylockCloudCode/public/index.html
+++ b/GreylockCloudCode/public/index.html
@@ -16,6 +16,18 @@
 	    lang:      [LANG_LOCALE]
 	</script>
 
+<script src="//www.parsecdn.com/js/parse-1.4.2.min.js"></script>
+    <script type="text/javascript">
+    Parse.initialize("rqx952GFL9NF8RlTqPzCazKANGmvnNEPcskzJpPM", "y0lri40GdFPFYugI0EoQByLDrXLhLrkIJA5Zgwun");
+    var TestObject = Parse.Object.extend("TestObject");
+    var testObject = new TestObject();
+    testObject.save({foo: "bar"}).then(function(object) {
+        alert("yay! it worked");
+    }); 
+    
+    Parse.Cloud.run("tourCreated")
+    </script>
+
   </head>
   <body>
 <script>
