--- a/GreylockCloudCode/public/index.html
+++ b/GreylockCloudCode/public/index.html
@@ -25,13 +25,13 @@ testObject.save({
 
 <body>
     <script>
-    window.fbAsyncInit = function() {
-        FB.init({
-            appId: '724994424276728',
-            xfbml: true,
-            version: 'v2.3'
-        });
-    };
+    // window.fbAsyncInit = function() {
+    //     FB.init({
+    //         appId: '724994424276728',
+    //         xfbml: true,
+    //         version: 'v2.3'
+    //     });
+    // };
     </script>
     <div>
         <h1>Congratulations! You're already hosting with Parse.</h1>
