--- a/GreylockCloudCode/public/index.html
+++ b/GreylockCloudCode/public/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>ayy lmao</title>
+    <title>nearme - a person discovery app</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="//platform.linkedin.com/in.js">
     api_key: 75 qd365qzyvqso
@@ -48,8 +48,8 @@ testObject.save({
 
     </script>
     <div>
-        <h1>Congratulations! You're already hosting with Parse.</h1>
-        <p>To get started, edit this file at <em>public/index.html</em> and start adding static content.</p>
+        <h1>nearme - a person discovery app</h1>
+        <p>nearme is a person discovery app that helps you find who you don't know but really should in your current location</p>
         <p>If you want something a bit more dynamic, delete this file and check out <a href="https://parse.com/docs/hosting_guide#webapp">our hosting docs</a>.</p>
         <p>weeeee i'm using sublime on the cloud!</p>
     </div>
