dat generic marketing website

--- a/GreylockCloudCode/public/index.html
+++ b/GreylockCloudCode/public/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>nearme - a person discovery app</title>
+    <title>nearme - a professional discovery app</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="//platform.linkedin.com/in.js">
     api_key: 75 qd365qzyvqso
@@ -25,33 +25,38 @@ testObject.save({
 
 <body>
     <script>
-
-        window.fbAsyncInit = function() {
-    Parse.FacebookUtils.init({ // this line replaces FB.init({
-      appId      : '724994424276728', // Facebook App ID
-      status     : true,  // check Facebook Login status
-      cookie     : true,  // enable cookies to allow Parse to access the session
-      xfbml      : true,  // initialize Facebook social plugins on the page
-      version    : 'v2.3' // point to the latest Facebook Graph API version
-    });
+    window.fbAsyncInit = function() {
+        Parse.FacebookUtils.init({ // this line replaces FB.init({
+            appId: '724994424276728', // Facebook App ID
+            status: true, // check Facebook Login status
+            cookie: true, // enable cookies to allow Parse to access the session
+            xfbml: true, // initialize Facebook social plugins on the page
+            version: 'v2.3' // point to the latest Facebook Graph API version
+        });
 
         // Run code after the Facebook SDK is loaded.
-  };
+    };
 
-      (function(d, s, id){
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) {return;}
-    js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/en_US/sdk.js";
-    fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));
-
+    (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {
+            return;
+        }
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
     </script>
-    <div>
-        <h1>nearme - a person discovery app</h1>
-        <p>nearme is a person discovery app that helps you find who you don't know but really should in your current location</p>
-        <p>If you want something a bit more dynamic, delete this file and check out <a href="https://parse.com/docs/hosting_guide#webapp">our hosting docs</a>.</p>
-        <p>weeeee i'm using sublime on the cloud!</p>
+    <div class="wrapper">
+        <div class="image">
+            <img src="nearme.png" style="padding-left:60px;">
+        </div>
+        <div class="text">
+            <h1>nearme - a professional discovery app</h1>
+            <p>nearme is a professional discovery app that helps you find who you don't know but really should in your current location</p>
+            <p>Check out our source code on <a href="https://github.com/ronnyb29/greylockHackfest">github</a>.</p>
+        </div>
     </div>
 </body>
 
